--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -69,4 +69,5 @@ flutter {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "androidx.activity:activity:1.8.0-alpha02"
+    implementation 'com.stripe:stripe-android:17.1.1'
 }
